@@ -41,7 +41,6 @@ public:
 			ST_SUM_MOVES, ///< Number of summary moves.
 			ST_ANSWER_QUALITY, ///< Level of answer quality.
 			ST_ANSWER_CHANGES, ///< Numbers of different answers.
-			ST_STATIC_CHECK, ///< Result of static check.
 			ST_STATE_CHANGES, ///< Number when memory or world changes.
 			ST_NEG_CIRCLES, ///< Sum of least circles.
 			ST_MOVE_DIFF, ///< Different from 0 in move code.
