@@ -14,6 +14,7 @@ Now
  * Fix evalation at end of circles.
  * Use elitism and tournament selection.
  * Change move format from "( CODE DIRECTION )" to "( CODE . DIRECTION )"
+ * Remove ST_STATIC_CHECK.
 
 Version 0.0.0.8 2010-12-05
  * Add support for current state.
